--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -2,7 +2,7 @@ name: main-push
 on:
   push:
     branches:
-      - main
+      - master
     paths-ignore:
       - '.github/ISSUE_TEMPLATE/**'
       - '**.md'
