--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -28,3 +28,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
           WITH_V: true
+          PRERELEASE: true
+          VERBOSE: true
+          INITIAL_VERSION: 0.0.0
