--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -47,4 +47,5 @@ jobs:
           git push -f origin "$major"
           # add vX as 1 is linked to short sha bug https://github.com/anothrNick/github-tag-action/actions/runs/3139501775/jobs/5099976842#step:1:35
           git tag -f "v$major"
+          echo "v$major"
           git push -f origin "v$major"
