--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -41,12 +41,7 @@ jobs:
           git fetch --tags
           tagFmt="^v?[0-9]+\.[0-9]+\.[0-9]+$"
           tag="$(git for-each-ref --sort=-v:refname --format '%(refname:lstrip=2)' | grep -E "$tagFmt" | head -n 1)"
-          [[ "$tag" =~ ^([0-9]+) ]] # use ^(v[0-9]+) for vX
-          major=${BASH_REMATCH[1]}
-          # update major tag
+          major=${tag%%.*}
           git tag -f "$major"
           git push -f origin "$major"
-          # add vX as 1 is linked to short sha bug https://github.com/anothrNick/github-tag-action/actions/runs/3139501775/jobs/5099976842#step:1:35
-          git tag -f "v$major"
-          echo "v$major"
-          git push -f origin "v$major"
+
