--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -26,6 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
           WITH_V: true
+          RELEASE_BRANCHES: test
           PRERELEASE: true
           VERBOSE: true
           INITIAL_VERSION: 0.0.0
