--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -26,8 +26,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
           WITH_V: true
-          RELEASE_BRANCHES: test
           PRERELEASE: true
+          RELEASE_BRANCHES: release.*,hotfix.*,master
           VERBOSE: true
           INITIAL_VERSION: 0.0.0
           DEFAULT_BUMP: patch
