--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -28,7 +28,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
           WITH_V: true
           PRERELEASE: true
-          RELEASE_BRANCHES: master
+          RELEASE_BRANCHES: hotfix.*
           VERBOSE: true
           INITIAL_VERSION: 0.0.0
           DEFAULT_BUMP: patch
